<resources>
    <string name="app_name">pujiSL</string>
    <string name="ini_halaman_pindah">1</string>
    <string name="hobi_nonton_netflix">hobi_Nonton_Netflix</string>
    <string name="ttl_dumai_12_06_2001">ttl_dumai_12_06_2001</string>
    <string name="alamat_jalan_purwodadi">alamat_jalan_purwodadi</string>
    <string name="prodi_teknologi_informasi">prodi_teknologi_informasi</string>
    <string name="nim_2010031805026">nim_2010031805026</string>
    <string name="nama_puji_sri_lestari">nama_puji_sri_lestari</string>
    <string name="button_pindah">button_pindah</string>
    <string name="move_data">move_data</string>
    <string name="move_with_object">move_with_object</string>
    <string name="dial_number">dial_number</string>
    <string name="move_with_result">move_with_result</string>
    <string name="biodata">biodata</string>
    <string name="result_from_activity">result_from_activity</string>
    <string name="choose_number">choose_number</string>
    <string name="_50">_50</string>
    <string name="_100">_100</string>
    <string name="_150">_150</string>
    <string name="_200">_200</string>
    <string name="choose">choose</string>
    <string name="data_received">data_received</string>
    <string name="bject_received">bject_received</string>
</resources>